<resources>
    <string name="app_name">BusBadajoz</string>
    <string name="title_home">Favoritas</string>
    <string name="title_lineas">Cercanas</string>
    <string name="title_ajustes">Lineas</string>

    <string name="hello_home_fragment">Saved fragment</string>
    <string name="hello_lines_fragment">Nearby fragment</string>
    <string name="hello_settings_fragment">Lines fragment</string>

    <string name="async_counter">0</string>
    <string name="nombre_parada">Facultad de ciencias</string>
    <string name="distance">13km</string>
    <string name="line_name">Linea 9</string>
    <string name="time_left">9</string>
    <string name="units_time_left">minuto</string>
    <string name="units_time_left_plural">minutos</string>
    <string name="app_title">Cercanas</string>
    <string name="title_activity_settings">Settings</string>

    <string name="update_p1">Actualizado hace </string>
    <string name="update_p2"> </string>

    <!-- Units -->
    <string name="meters_unit">metros</string>
    <string name="kilometers_unit">km</string>
    <string name="seconds_unit">segundos</string>
    <string name="minutes_unit">minutos</string>
    <string name="hours_unit">horas</string>
    <string name="days_unit">días</string>

    <string name="meter_unit">metro</string>
    <string name="kilometer_unit">km</string>
    <string name="second_unit">segundo</string>
    <string name="minute_unit">minuto</string>
    <string name="hour_unit">hora</string>
    <string name="day_unit">día</string>

    <!-- Preference Titles -->
    <string name="messages_header">Apariencia</string>
    <string name="sync_header">Acerca de</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="next_stop">Siguiente parada</string>
    <string name="direction">Dirección</string>
    <string name="estimate">Distancia</string>
    <string name="settings_title">Ajustes</string>


</resources>
