<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stop_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="false">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/nombre_parada"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:layout_marginTop="4dp"
        android:text="33 km"
        android:textColor="@color/text_color_secondary"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato"
        android:text=" • "
        android:textColor="@color/text_color_secondary"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/distance"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/update_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato"
        android:text="@string/update_p1"
        android:textColor="@color/text_color_secondary"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/updated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:text="12"
        android:textColor="@color/text_color_secondary"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/update_p1"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:ticker_animationDuration="0"
        app:ticker_defaultCharacterList="number" />

    <TextView
        android:id="@+id/update_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato"
        android:text="minutos"
        android:textColor="@color/text_color_secondary"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/updated_time"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bus_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/distance">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:fontFamily="@font/lato_black"
        android:orientation="horizontal"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/bus_list">

        <LinearLayout
            android:id="@+id/distance_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/estimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/estimate"
                android:textAlignment="center"
                android:textColor="@color/gray_detail"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/estimate_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_light"
                android:text="00:00"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/next_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:padding="3dp"
                android:text="@string/next_stop"
                android:textColor="@color/gray_detail"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/next_stop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="3dp"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:padding="3dp"
                android:text="@string/direction"
                android:textColor="@color/gray_detail"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/direction_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="3dp"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>